# programming4biologists

./: .gitmodules  LICENSE  README.md  getting-started.md  index.md  schedule.md  using-vs-code.md  using_vs_code.md
cmake-project/: CMakeLists.txt  main.cpp
installer-linux/: bootstrap_apt.sh  bootstrap_dnf.sh  bootstrap_wsl.sh
installer-linux-mac/: README.md  bootstrap-apt.sh  bootstrap-brew.sh  bootstrap-dnf.sh  bootstrap-pacman.sh  bootstrap-rpm.sh
installer-linux-mac/projects_apt/hello_world/: CMakeLists.txt
installer-linux-mac/projects_pacman/hello_world/: main.cpp
installer-linux/projects/hello_world/: CMakeLists.txt  main.cpp
installer-mac/: README.md
installer-mac/projects/hello_world/: CMakeLists.txt
installer-windows/: README.md  bootstrap.bat  sandbox.wsb
installer-windows/templates/: argv.json  user_settings.json
installer-windows/templates/hello_world/: CMakeLists.txt  cleanup.bat
